<resources>
    <string name="app_name">Get Swipe Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_type">Product Type</string>
    <string name="product_price">Product Price</string>
    <string name="product_tax">Product Tax</string>
    <string name="submit">Submit</string>
    <string name="add_product_photo">Add Product Photo</string>
    <string name="search_product">Search Product</string>
</resources>